unsplash background added

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 <body>
     <div id="message">
-        <h1>Under Maintenance</h1>
-        <p>We apologize for the inconvenience. The site is currently undergoing maintenance.</p>
+        <h1>Our Website Under Maintenance!</h1>
+        <p>We apologize for the inconvenience. Be back soon.</p>
         <p id="photo-credit"></p>
     </div>
 
